# mer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dev.sh  docker-compose.yml  sql.sh
.github/workflows/: ci.yaml
assets/i18n/de-DE/: main.ftl
assets/i18n/en-US/: main.ftl
assets/static/: 404.html  style.css
assets/views/: authenticated.html  base.html  home.html
assets/views/auth/: check_mail.html  forgot_password.html  login.html  reset.html  signup.html
assets/views/workflow/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/views/workflow/src/: App.tsx
config/: development.yaml  test.yaml
examples/: playground.rs
src/: app.rs  lib.rs  routes.rs
src/controllers/: auth.rs
src/initializers/: view_engine.rs
src/mailers/: auth.rs
src/mailers/auth/forgot/: html.t  text.t
src/mailers/auth/magic_link/: html.t  subject.t
src/mailers/auth/welcome/: html.t
src/models/: users.rs
src/views/: auth.rs
src/web/: mod.rs  security.rs
src/web/auth/: controllers.rs  views.rs
src/web/authn/: controllers.rs  middlewares.rs  mod.rs  router.rs  views.rs
src/web/dashboard/: controllers.rs  router.rs  views.rs
src/web/workflow/: controllers.rs  router.rs  views.rs
tests/models/: users.rs
tests/requests/: auth.rs  prepare_data.rs
